--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,6 +6,26 @@
   .smooth-animation {
     transition: all 500ms ease-in-out;
   }
+
+  .gradient-hover {
+    position: relative;
+    overflow: hidden;
+  }
+  .gradient-hover::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: -100%;
+    width: 200%;
+    height: 100%;
+    background: linear-gradient(to right, rgba(0, 123, 255, 0) 0%, rgba(0, 123, 255, 0.5) 50%, rgba(0, 123, 255, 0) 100%);
+    transition: all 0.5s ease;
+    opacity: 0;
+  }
+  .gradient-hover:hover::before {
+    left: 100%;
+    opacity: 1;
+  }
 }
 
 body {
