updated globals.css + updated parallax scrolling for sixth slide + updated checkmark component + added count tracking for confirm component + fixed positioning of confirm inside of expanding services component

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -153,3 +153,24 @@ input[type="number"]::-webkit-inner-spin-button {
 input[type="number"] {
   -moz-appearance: textfield;
 }
+
+html.lenis,
+html.lenis body {
+  height: auto;
+}
+
+.lensi.lenis-smooth {
+  scroll-behavior: auto !important;
+}
+
+.lenis.lenis-smooth [data-lenis-prevent] {
+  overscroll-behavior: contain;
+}
+
+.lenis.lenis-stopped {
+  overflow: hidden;
+}
+
+.lenis.lenis-smooth iframe {
+  pointer-events: none;
+}
