--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -202,3 +202,15 @@ html.lenis body {
       transparent 1500px);
   background-size: cover;
 }
+
+.multiple-large-radial-bg {
+  background: radial-gradient(circle at 10% 50%,
+      rgba(61, 119, 255, 0.35),
+      rgba(0, 0, 0, 0.2),
+      transparent 1500px),
+    radial-gradient(circle at 90% 50%,
+      rgba(255, 81, 61, 0.35),
+      rgba(0, 0, 0),
+      transparent 2000px);
+  background-size: cover;
+}
