--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -19,10 +19,12 @@
     left: -100%;
     width: 200%;
     height: 100%;
-    background: linear-gradient(to right,
-        rgba(0, 123, 255, 0) 0,
-        rgba(0, 128, 255, 0.5) 50%,
-        rgba(0, 123, 255, 0) 100%);
+    background: linear-gradient(
+      to right,
+      rgba(0, 123, 255, 0) 0,
+      rgba(0, 128, 255, 0.5) 50%,
+      rgba(0, 123, 255, 0) 100%
+    );
     transition: 0.5s;
     opacity: 0;
   }
@@ -55,7 +57,6 @@
   }
 
   @keyframes blink {
-
     from,
     to {
       opacity: 1;
@@ -123,7 +124,6 @@ body::-webkit-scrollbar {
 }
 
 @keyframes pulse {
-
   0%,
   100% {
     transform: scale(1);
@@ -177,41 +177,53 @@ html.lenis body {
 }
 
 .radial-bg {
-  background: radial-gradient(circle at 30% 20%,
+  background: radial-gradient(
+      circle at 30% 20%,
       rgba(61, 119, 255, 0.35),
       rgba(0, 0, 0, 0.2),
       rgba(0, 0, 0, 0),
-      transparent 1000px),
-    radial-gradient(circle at 70% 40%,
+      transparent 1000px
+    ),
+    radial-gradient(
+      circle at 70% 40%,
       rgba(61, 119, 255, 0.35),
       rgba(0, 0, 0, 0.2),
       rgba(0, 0, 0, 0),
-      transparent 1000px),
-    radial-gradient(circle at 30% 60%,
+      transparent 1000px
+    ),
+    radial-gradient(
+      circle at 30% 60%,
       rgba(61, 119, 255, 0.35),
       rgba(0, 0, 0, 0.2),
       rgba(0, 0, 0, 0),
-      transparent 1000px);
+      transparent 1000px
+    );
   background-size: cover;
 }
 
 .large-radial-bg {
-  background: radial-gradient(circle at 30% 55%,
-      rgba(61, 119, 255, 0.35),
-      rgba(0, 0, 0, 0.2),
-      transparent 1500px);
+  background: radial-gradient(
+    circle at 30% 55%,
+    rgba(61, 119, 255, 0.35),
+    rgba(0, 0, 0, 0.2),
+    transparent 1500px
+  );
   background-size: cover;
 }
 
 .multiple-large-radial-bg {
-  background: radial-gradient(circle at 10% 50%,
+  background: radial-gradient(
+      circle at 10% 50%,
       rgba(61, 119, 255, 0.35),
       rgba(0, 0, 0, 0.2),
-      transparent 1500px),
-    radial-gradient(circle at 90% 50%,
+      transparent 1500px
+    ),
+    radial-gradient(
+      circle at 90% 50%,
       rgba(255, 81, 61, 0.35),
       rgba(0, 0, 0),
-      transparent 2000px);
+      transparent 2000px
+    );
   background-size: cover;
 }
 
@@ -222,8 +234,25 @@ html.lenis body {
   left: 0;
   width: 100%;
   height: 100%;
-  background: radial-gradient(circle,
-      rgba(0, 0, 0, 0) 40%,
-      rgba(0, 0, 0, 0.5) 100%);
+  background: radial-gradient(
+    circle,
+    rgba(0, 0, 0, 0) 40%,
+    rgba(0, 0, 0, 0.5) 100%
+  );
   z-index: 20;
+}
+
+.reverse-vignette::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: radial-gradient(
+    circle,
+    rgba(0, 0, 0, 0) 40%,
+    rgba(0, 0, 0, 0) 100%
+  );
+  z-index: 21;
 }
