updated NavBar and globals.css

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,15 +2,8 @@
 
 @config '../../tailwind.config.ts';
 
-/*
-  The default border color has changed to `currentColor` in Tailwind CSS v4,
-  so we've added these compatibility styles to make sure everything still
-  looks the same as it did with Tailwind CSS v3.
-
-  If we ever want to remove these styles, we need to add an explicit border
-  color utility to any element that depends on these defaults.
-*/
 @layer base {
+
   *,
   ::after,
   ::before,
@@ -35,12 +28,10 @@
     left: -100%;
     width: 200%;
     height: 100%;
-    background: linear-gradient(
-      to right,
-      rgba(0, 123, 255, 0) 0,
-      rgba(0, 128, 255, 0.5) 50%,
-      rgba(0, 123, 255, 0) 100%
-    );
+    background: linear-gradient(to right,
+        rgba(0, 123, 255, 0) 0,
+        rgba(0, 128, 255, 0.5) 50%,
+        rgba(0, 123, 255, 0) 100%);
     transition: 0.5s;
     opacity: 0;
   }
